test_files/s_cproc/include/test_005/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_005/i.input:1:9: error: empty filename in #include
 #include""
         ^
